# pankha

./: .dockerignore  .env  .gitignore  .mailmap  CLA.md  FIXES-CONFIGURATION-PERSISTENCE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE-COMMERCIAL.md  README-PUBLIC.md  README.md  SECURITY.md  TROUBLESHOOTING.md  TYPESCRIPT_FIXES.md  checksums.txt  compose-public.yml  compose.yml  draft-COMMERCIAL-TERMS.md  draft-LICENSE  example.env  fan-profiles-backup.sql  package-lock.json  package.json  release.json
.github/: CODEOWNERS
.github/input/: release-body-template.md  release-notes.md
.github/scripts/: compose-release-notes.sh  reset-release-notes.sh
.github/workflows/: ci.yml  deploy-wiki.yml  notify-private.yml  pr-labeler.yml  release-notes.yml  release-public.yml
agents/clients/linux/rust/: Cargo.toml  IMPLEMENTATION_NOTES.md  Makefile  README.md  TASK_12_SUMMARY.md  build.rs  config.example.json
agents/clients/linux/rust/output/: pankha-agent-linux_arm64  pankha-agent-linux_x86_64
agents/clients/linux/rust/src/: app.rs  config.rs  daemon.rs  hardware.rs  main.rs  version.rs
agents/clients/linux/rust/src/app/: cli.rs
agents/clients/linux/rust/src/config/: persistence.rs  setup.rs  sst.rs  types.rs
agents/clients/linux/rust/src/daemon/: control.rs  pid.rs
agents/clients/linux/rust/src/hardware/: linux.rs  macos.rs  types.rs  windows.rs
agents/clients/linux/rust/src/hardware/linux/: diagnostics.rs  fans.rs  monitor.rs  nvidia.rs  sensors.rs
agents/clients/linux/rust/src/websocket/: client.rs  commands.rs  messaging.rs  self_update.rs
agents/clients/linux/virtual-agents/host-ipmi-rust/: Cargo.toml  Makefile  build.rs  config.example.json  profile.example.json
agents/clients/linux/virtual-agents/host-ipmi-rust/src/: app.rs  hardware.rs  main.rs  network.rs  system.rs  websocket.rs
agents/clients/linux/virtual-agents/host-ipmi-rust/src/app/: cli.rs  logging.rs  platform.rs
agents/clients/linux/virtual-agents/host-ipmi-rust/src/config/: persistence.rs  setup.rs  types.rs
agents/clients/linux/virtual-agents/host-ipmi-rust/src/daemon/: control.rs  status.rs  systemd.rs
agents/clients/linux/virtual-agents/host-ipmi-rust/src/hardware/: types.rs
agents/clients/linux/virtual-agents/host-ipmi-rust/src/hardware/ipmi/: ipmi_monitor.rs  mod.rs
agents/clients/linux/virtual-agents/host-ipmi-rust/src/profiles/: interpolator.rs  loader.rs  merger.rs  mod.rs  types.rs
agents/clients/linux/virtual-agents/host-ipmi-rust/src/system/: executor.rs  parser.rs
agents/clients/linux/virtual-agents/host-ipmi-rust/src/websocket/: client.rs  commands.rs  messaging.rs  profile_fetch.rs  self_update.rs
backend/: package-lock.json  package.json
backend/profiles/: bmc_profile.schema.json
backend/src/: index.ts
docker/: Dockerfile  healthcheck.sh  nginx.conf  start.sh
documentation/backend/: build-instructions.md
frontend/: icon_gallery.html  index.html  package-lock.json  package.json  vite.config.ts
(+411 files in other folders)
